--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -123,8 +123,18 @@
         android:layout_height="wrap_content"
         android:text="abc"
         android:textSize="20sp"
+        android:layout_above="@+id/tv_result_1"
+        android:layout_marginBottom="50dp"
+        />
+
+    <TextView
+        android:id="@+id/tv_result_1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="abc"
+        android:textSize="20sp"
         android:layout_above="@+id/ln2"
-        android:layout_marginBottom="100dp"
+        android:layout_marginBottom="50dp"
         />
 
     <LinearLayout
