--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -62,6 +62,7 @@
         </LinearLayout>
     </LinearLayout>
     <LinearLayout
+        android:id="@+id/ln2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
@@ -116,29 +117,65 @@
         </LinearLayout>
 
     </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:orientation="horizontal"
+        android:layout_below="@+id/ln2"
+        android:layout_marginTop="20dp"
+        >
+        <Button
+            android:id="@+id/btn_bat_all"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:background="@drawable/roundrect_green"
+            android:text="Bật tất cả"
+            android:textColor="#fff"
+            android:layout_weight="1"
+            android:layout_marginRight="50dp"
+            android:layout_marginLeft="20dp"
+            />
+
+        <Button
+            android:id="@+id/btn_tat_all"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:background="@drawable/roundrect_green"
+            android:text="Tắt tất cả"
+            android:textColor="#fff"
+            android:layout_weight="1"
+            android:layout_marginRight="20dp"
+            />
+
+    </LinearLayout>
 
     <TextView
         android:id="@+id/tv_result"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="abc"
+        android:text="Lệnh gửi đi: "
         android:textSize="20sp"
         android:layout_above="@+id/tv_result_1"
         android:layout_marginBottom="50dp"
+        android:layout_marginLeft="20dp"
         />
 
     <TextView
         android:id="@+id/tv_result_1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="abc"
+        android:text="Pi trả về:"
         android:textSize="20sp"
-        android:layout_above="@+id/ln2"
+        android:layout_above="@+id/ln4"
         android:layout_marginBottom="50dp"
+        android:layout_marginLeft="20dp"
         />
 
     <LinearLayout
-        android:id="@+id/ln2"
+        android:id="@+id/ln4"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
@@ -164,26 +201,6 @@
                 android:visibility="invisible"
                 />
         </FrameLayout>
-
-        <Button
-            android:id="@+id/btn_start_play"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:text="Start play"
-            android:textSize="15sp"
-            android:layout_weight="1"
-            />
-
-        <Button
-            android:id="@+id/btn_stop_play"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:text="Stop play"
-            android:textSize="15sp"
-            android:layout_weight="1"
-            />
     </LinearLayout>
 
 </RelativeLayout>
